--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ body {
   overflow: hidden;
 }
 
-.container {
+.container-satu {
   display: flex;
-  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .sidebar {
