--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   font-weight: 700;
   padding: 7% 0;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-  url('/assets/img/head-bckgrnd.jpg');
+  url('/assets/img/Raafi' Rasyiid.png');
   background-size: cover;
   background-position: center;
   text-align: center;
