--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ body {
 
 .side-web-title{
   /* font-size: 22pt;
-  font-weight: 700;
+  font-weight: 700; */
   padding: 7% 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  /*background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
   url('/assets/img/raafi-rasyiid.png'); */
   background: url('/assets/img/raafi-rasyiid.png');
   background-size: cover;
