--- a/style.css
+++ b/style.css
@@ -30,11 +30,7 @@ body {
 }
 
 .side-web-title{
-  /* font-size: 22pt;
-  font-weight: 700; */
-  padding: 7% 0;
-  /*background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-  url('/assets/img/raafi-rasyiid.png'); */
+  padding: 22%;
   background: url('/assets/img/raafi-rasyiid.png');
   background-size: cover;
   background-position: center;
